opam-version: "2.0"
name: "coucoubot"
version: "dev"
author: "Armael"
maintainer: "Armael"
synopsis: "Automate your coucou"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
    "dune" {build}
    "base-bytes"
    "base-unix"
    "result"
    "calculon" { >= "0.8" & < "0.9" }
    "calculon-web" { >= "0.8" & < "0.9" }
    "lwt"
    "mtime"
    "iter"  # for calculon.extras
    "tiny_httpd"
    "sqlite3_utils"
    "containers"
    "ISO8601"
    "odoc" {with-doc}
]
tags: [ "coucou" "aop" ]
homepage: "https://github.com/CoucouInc/coucoubot"
bug-reports: "https://github.com/CoucouInc/coucoubot/issues"
dev-repo: "git+https://github.com/CoucouInc/coucoubot"

