
(executable
  (name coucoubot)
  (public_name coucoubot)
  (modes native)
  (flags :standard -warn-error -a+8)
  (libraries eio eio_main eio.unix irky re.perl containers calculon calculon-web
             sqlite3_utils yojson tiny_httpd tiny_httpd.prometheus threads
             ptime ptime.clock.os calculon.extras logs))
